--- a/FumiEngine.vcxproj.filters
+++ b/FumiEngine.vcxproj.filters
@@ -187,6 +187,7 @@
     <ClCompile Include="Engine\Util\Shake.cpp" />
     <ClCompile Include="Application\Enemy\SubBoss\MoveTypes\SubBossMoveState.cpp" />
     <ClCompile Include="Application\Enemy\SubBoss\MoveTypes\DescentDive.cpp" />
+    <ClCompile Include="Application\Enemy\SubBoss\MoveTypes\StartIntro.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Collision\ColliderShape.h" />
@@ -284,6 +285,7 @@
     <ClInclude Include="Application\Player\Behavior\PlayerBehavior_Special.h" />
     <ClInclude Include="Application\Enemy\SubBoss\MoveTypes\SubBossMoveState.h" />
     <ClInclude Include="Application\Enemy\SubBoss\MoveTypes\DescentDive.h" />
+    <ClInclude Include="Application\Enemy\SubBoss\MoveTypes\StartIntro.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\Bloom.hlsli" />
