終了演出作成砥粒

--- a/FumiEngine.vcxproj
+++ b/FumiEngine.vcxproj
@@ -106,6 +106,7 @@
     <ClCompile Include="Application\Player\Behavior\PlayerBehavior_Special.cpp" />
     <ClCompile Include="Application\Enemy\Minion\BaseMinion.cpp" />
     <ClCompile Include="Application\Enemy\SubBoss\MoveTypes\DescentDive.cpp" />
+    <ClCompile Include="Application\Enemy\SubBoss\MoveTypes\EndGameOutro.cpp" />
     <ClCompile Include="Engine\Collision\CollisionManager3D.cpp" />
     <ClCompile Include="Engine\Scene\BaseScene.cpp" />
     <ClCompile Include="Engine\Util\Buffer.cpp" />
@@ -199,6 +200,7 @@
     <ClInclude Include="Application\Enemy\Minion\BaseMinion.h" />
     <ClInclude Include="Application\Enemy\SubBoss\MoveTypes\DescentDive.h" />
     <ClInclude Include="Direction.h" />
+    <ClInclude Include="Application\Enemy\SubBoss\MoveTypes\EndGameOutro.h" />
     <ClInclude Include="Engine\Collision\CollisionManager3D.h" />
     <ClInclude Include="Engine\Scene\BaseScene.h" />
     <ClInclude Include="Engine\Util\BasicTask.h" />
