--- a/FumiEngine.vcxproj.filters
+++ b/FumiEngine.vcxproj.filters
@@ -190,8 +190,10 @@
     <ClCompile Include="ParticleMan.cpp" />
     <ClCompile Include="Application\Effect\SmokeEffect.cpp" />
     <ClCompile Include="SmokeParticle.cpp" />
-    <ClCompile Include="Trajectory.cpp" />
+    <ClCompile Include="Application\Effect\Trajectory.cpp" />
     <ClCompile Include="Application\Enemy\SubBoss\MoveTypes\EndGameOutro.cpp" />
+    <ClCompile Include="Application\Scene\GameOverScene.cpp" />
+    <ClCompile Include="Application\Scene\GameClearScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Collision\ColliderShape.h" />
@@ -558,8 +560,10 @@
     <ClInclude Include="ParticleMan.h" />
     <ClInclude Include="Application\Effect\SmokeEffect.h" />
     <ClInclude Include="SmokeParticle.h" />
-    <ClInclude Include="Trajectory.h" />
+    <ClInclude Include="Application\Effect\Trajectory.h" />
     <ClInclude Include="Application\Enemy\SubBoss\MoveTypes\EndGameOutro.h" />
+    <ClInclude Include="Application\Scene\GameOverScene.h" />
+    <ClInclude Include="Application\Scene\GameClearScene.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\Bloom.hlsli" />
