--- a/FumiEngine.vcxproj.filters
+++ b/FumiEngine.vcxproj.filters
@@ -192,6 +192,7 @@
     <ClCompile Include="SmokeParticle.cpp" />
     <ClCompile Include="Trajectory.cpp" />
     <ClCompile Include="Application\Enemy\SubBoss\MoveTypes\EndGameOutro.cpp" />
+    <ClCompile Include="DeadParticle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Collision\ColliderShape.h" />
@@ -560,6 +561,7 @@
     <ClInclude Include="SmokeParticle.h" />
     <ClInclude Include="Trajectory.h" />
     <ClInclude Include="Application\Enemy\SubBoss\MoveTypes\EndGameOutro.h" />
+    <ClInclude Include="DeadParticle.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\Bloom.hlsli" />
